--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
             </div>  
         </header>
         <div class="col-10 fondo">
-            <div>
-                <h1 class="text-center fs-1">Proyecto Final Andrisani</h1>
+            <div class="d-flex justify-content-between">
+                <h1 class="fs-1">Proyecto Final Andrisani</h1>
+                <div id="reloj" class="fs-4 "></div>
             </div>
             <h3 class="titulos">Jugadores aceptados:</h3>
             <div class="letra" id="carrito">
