--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
               <input type="text" name="clubactual" id="clubactual" placeholder="Club actual del Jugador">
               <button type="submit">Agregar Jugador</button>
             </form>
+            <br>
+            <button id="botonAjax">Cargar Sitio</button>
+            <div class="letra" id="respuesta"></div>
         </div>
     </main>
     <footer class="row text-center">
